--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -42,4 +42,4 @@ jobs:
       - run: npx nx reset
       # - run: npx nx graph --file=graph.json
       # - run: npx nx affected -t lint test build e2e --base=master --head=HEAD
-      - run: npx nx affected -t lint test build e2e --base=master --head=HEAD --parallel --verbose
+      - run: npx nx affected -t build e2e --base=master --head=HEAD --parallel --verbose
