--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,7 +30,8 @@ jobs:
           node-version: 20
           cache: 'npm'
 
-      - run: npm ci --legacy-peer-deps
+      - run: npm install --force
+      # - run: npm ci --legacy-peer-deps
       - run: npx cypress install
       - uses: nrwl/nx-set-shas@v4
 
