--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,8 +13,6 @@ permissions:
 jobs:
   main:
     runs-on: ubuntu-latest
-    env:
-      NODE_OPTIONS: --no-experimental-wasi
     steps:
       - uses: actions/checkout@v4
         with:
@@ -31,6 +29,7 @@ jobs:
         with:
           node-version: 20
           cache: 'npm'
+      - run: echo 'NODE_OPTIONS="--no-experimental-wasi"' >> $GITHUB_ENV
 
       # - run: npm install --force
       - run: npm ci --legacy-peer-deps
